<resources>
    <string name="app_name">Poundland</string>
    <string name="api_key_place">AIzaSyBQgWjytAm8XR395Ioiggq47Ga3C12IBe8</string>
    <string name="strip_publish_key_testing">pk_test_h4fHoDqW8ApDhubqrPG3qc4E</string>
    <string name="paymentIntentClientSecret_testing">sk_test_bg2Eh6vCTaCij0b6xJVvn6Ce</string>
    <string name="strip_publish_key">pk_live_BApkbtfywIQ29vBk0evTAigv</string>
    <string name="paymentIntentClientSecret">sk_live_CtZj9LK0Wc29Iaa0V9UadPON</string>
    <string name="facebook_app_id">2921645464530071</string>
    <string name="fb_login_protocol_scheme">fb2921645464530071</string>
    <string name="server_client_id">640342860853-qke64tm17u19gdo52r10q1o9h7ddqa8r.apps.googleusercontent.com</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_item_offer_message">POUNDLAND credit</string>
    <string name="dummy_item_refer_message">Use my referral code to get value off on your second Poundland order.</string>
    <string name="dummy_search_message">,matching the category</string>
    <string name="category">Category</string>
    <string name="categories">CATEGORIES</string>
    <string name="i_want_to">I want to</string>
    <string name="na">N/A</string>
    <string name="category_detail">Category Details</string>
    <string name="euro">\u20ac 120.00</string>
    <string name="worth_pound">Worth \u00a3</string>
    <string name="pound">\u00a3</string>
    <string name="stamp_used_">You used this stamp on 11 April 2022 at 15:30 and got \u00a3 200 discount on your purchase.</string>
    <string name="stamp_unlock_">You unlocked this stamp on 10 April 2022 at 15:30 and can get a T-shirt from this store untill 22 April 2022.</string>
    <string name="pound_3">\u00a3 3</string>
    <string name="pound_2_5">\u00a3 2.5</string>
    <string name="percent">%</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="min_order">Min.Order \u00a3</string>
    <string name="no_offers">No Offer</string>
    <string name="offer_details"> Offer Details</string>
    <string name="offer"> Offer</string>
    <string name="offers"> Offers</string>
    <string name="off"> % Off</string>
    <string name="view_store">View Store</string>
    <string name="Timings">Timings :</string>
    <string name="collect_deliver">Collection | Delivery</string>
    <string name="login">Login</string>
    <string name="open_caps">OPEN</string>
    <string name="open">Open</string>
    <string name="close_caps">CLOSED</string>
    <string name="close">Closed</string>
    <string name="close_xt">Close</string>
    <string name="delivery_charge">Delivery Charge:</string>
    <string name="Visa_Credit">Visa Credit</string>
    <string name="opening_soon">Opening Soon</string>
    <string name="click_n_collect">Click &amp; Collect</string>
    <string name="free_home_delivery">Free Home Delivery</string>
    <string name="logout">Logout</string>
    <string name="share_using">Share Using:</string>
    <string name="payment_details">Payment Details</string>
    <string name="delete_account_dialog_message">Sad to let you go. Please let us know if there is anything we can help you with your dissatisfaction.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_message">Are you sure you want to delete this account?</string>
    <string name="use_card_message">Are you sure you want to use this card?</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="cancel_message">Are you sure you want to cancel this order ?</string>
    <string name="cancel_booking_message">Are you sure you want to cancel this booking ?</string>
    <string name="delete_noti">Do you want to delete this notification?</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_message">Delete Message</string>
    <string name="delete_card">Do you want to delete this card?</string>
    <string name="delete_chat">Are you sure you want to delete this chat?</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_again">Are you sure you want to cancel this order again?</string>
    <string name="cancel_order_message">Are you sure you want to cancel this order?</string>
    <string name="delete_message_note">Are you sure you want to delete this message?</string>
    <string name="terms">Terms and Conditions are great for limiting and restricting unwanted and undesirable behavior or activity on your mobile app.
Below is an example of the way 500px limits how users can use the site by using this language in their agreement. If a user violates any of these limitations, 500px can remove the user or at a minimum, the violative content:</string>
    <string name="lorium_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorium_ipsum_short">It was popularised in the 1960s ,and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="reservation_terms">I confirm that when placing this booking I, or my guests, are not gathering indoors in groups of more than two households (your support bubble counts as one household) - this includes :
                • When dining out or going to the pub or gather outdoors in a group of more than six people from different households.
                • Gatherings larger than 6 should only take place if everyone is from just two household.
                • Interact socially with anyone outside the group you are attending a place with, even if you see other people you know, for example, in a restaurant, community centre or place of worship hold or attend celebrations (such as parties) where it is difficult to maintain social distancing (your support bubble counts as one household) I agree me and my guests adhere to all the above guidance </string>
    <string name="replace_refund_note_start">You can place a refund or replacement request in </string>
    <string name="more_for_home_deliver">More For Home Delivery</string>
    <string name="more_for_free_deliver">More For Free Delivery</string>
    <string name="replace_refund_note_end">days.</string>
    <string name="submit">Submit</string>
    <string name="note">*Note: </string>
    <string name="resend">Resend</string>
    <string name="send">SEND</string>
    <string name="register">Register</string>
    <string name="username_mobile">User Name/Mobile Number</string>
    <string name="otp_not_receive">Didn\'t Receive OTP?</string>
    <string name="new_user">New User?</string>
    <string name="remember_me">Remember me</string>
    <string name="qr_code_message">Show This QR Code To Staff Member</string>
    <string name="stamp_redeemed">This stamp has been used.</string>
    <string name="stamp_not_redeemed">This stamp has not been redeemed.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_message">Please enter your email address and we will send you a verification code.</string>
    <string name="please_enter_password">Please enter the password</string>
    <string name="password_must_contain">Password must contain eight characters including one uppercase letter one lowercase letter, one special character and numeric character.</string>
    <string name="pin_must_contain">Pin must have 4 characters</string>
    <string name="please_enter_yoour_current_password">Please enter your current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="please_enter_yoour_current_pin">Please enter your current pin</string>
    <string name="please_enter_new_pin">Please enter new pin</string>
    <string name="please_enter_valid_info">Please enter valid information</string>
    <string name="please_confirm_your_pin">Please confirm your pin</string>
    <string name="password_mismatch">Password is mismatch entered by you</string>
    <string name="pin_mismatch">Pin is mismatch entered by you</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="reset_pin">Reset Poundland Pin</string>
    <string name="reset_pin_scr">Reset Pin</string>
    <string name="about">About</string>
    <string name="about_swoope">About Poundland Local</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="in_stock">In Stock</string>
    <string name="notify_message">We will notify you. </string>
    <string name="notify_me">Notify Me</string>
    <string name="version_of_swoope_app">Version of Poundland Local App</string>
    <string name="faq_support">FAQ &amp; Support</string>
    <string name="no_internet_available_msg">No internet connection available</string>
    <string name="msg_please_try_later">Something went wrong. Please try later</string>
    <string name="wrong_number">is not a valid phone number.</string>
    <string name="poor_internet_connection">oops..Poor internet connection</string>
    <string name="total_cart_item_not_found">Total cart item not found</string>
    <string name="please_click_back_again_to_exit">Please click BACK again to exit</string>
    <string name="wronge_email">"We can not find a user with that e-mail address."</string>
    <string name="enter_email_id">Please enter email id</string>
    <string name="enter_email_id_and_password">Please enter a valid email and password</string>
    <string name="please_enter_a_valid_email">Please enter a valid email id</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_name">Please enter valid name</string>
    <string name="please_enter_a_valid_first_name">Please enter a valid first name</string>
    <string name="please_enter_a_first_valid_name">Please enter a first name</string>
    <string name="please_enter_a_valid_last_name">Please enter a valid last name</string>
    <string name="please_enter_mobile_number">Please enter a mobile number</string>
    <string name="please_enter_a_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="please_select_dob">Please choose date of birth</string>
    <string name="apply">Apply</string>
    <string name="email_address">Your email address</string>
    <string name="mobile_number">Your mobile number</string>
    <string name="setting">Setting</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="save">Save</string>
    <string name="get_otp">Get OTP</string>
    <string name="user_details">User Details</string>
    <string name="name">Your Name</string>
</resources>