<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25sdp"
        app:cardBackgroundColor="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_ratting_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="4dp">


            <RelativeLayout
                android:id="@+id/rl_write_review_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/iv_close_dialog"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/ic_delete"
                    android:tint="@color/color_light_red" />

                <TextView
                    android:id="@+id/tv_rate_this_deal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_toStartOf="@+id/iv_close_dialog"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/user_details"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_13sdp" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_rate_this_deal"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/white_filled_rect"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center|start"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_name"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/white_filled_rect"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center|start"
                    android:hint="@string/mobile_number"
                    android:maxLength="12"
                    android:inputType="number"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_mobile"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/white_filled_rect"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center|start"
                    android:hint="@string/email_address"
                    android:maxLength="60"
                    android:maxLines="1"
                    android:textAllCaps="false"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />
                <EditText
                    android:id="@+id/et_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_email"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/white_filled_rect"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center|start"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_otp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_get_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/montserrat_bold"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/get_otp"
                        android:textColor="@color/app_header_color"
                        android:textSize="@dimen/_14sdp" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/red_filled_rounded_rect"
                        android:fontFamily="@font/montserrat_regular"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/apply"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>