<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ChangePasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_main" style="@style/app_color_strip"
            android:layout_marginBottom="@dimen/_20sdp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/iv_back"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_medium"
                android:maxLines="1"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_15sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_main"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/border_color"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"

            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_settings" />

            <TextView
                android:id="@+id/tv_setting_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/iv_setting"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/setting"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_15sdp" />


            <ImageView
                android:id="@+id/iv_double_arrow"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/tv_setting_level"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_right_arrow_node_small" />


            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_password"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/iv_double_arrow"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>


        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_setting"
            android:background="@drawable/shadow_rect"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_italic"
            android:hint="@string/please_enter_yoour_current_password"
            android:inputType="textPassword"
            android:textColor="@color/color_black"
            android:textColorHint="@color/hint_grey"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_current_password"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="@dimen/_15sdp"
            android:background="@drawable/shadow_rect"
            android:fontFamily="@font/montserrat_italic"
            android:hint="@string/please_enter_new_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/color_black"
            android:textColorHint="@color/hint_grey"
            android:textSize="@dimen/_13sdp" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_new_password"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="@dimen/_15sdp"
            android:background="@drawable/shadow_rect"
            android:fontFamily="@font/montserrat_italic"
            android:hint="@string/please_confirm_your_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:textColor="@color/color_black"
            android:textColorHint="@color/hint_grey"
            android:textSize="@dimen/_13sdp" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/et_confirm_password"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_50sdp"
            android:paddingEnd="@dimen/_50sdp"
            android:background="@drawable/red_filled_rounded_rect"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_16sdp" />


    </RelativeLayout>
</layout>