<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        style="@style/parentLayout"
        android:background="@drawable/splash_bg">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_55sdp"
                android:padding="@dimen/_5sdp"
                android:layout_gravity="center"
                android:src="@drawable/app_logo_poundland" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/forgot_password_message"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:background="@drawable/transparent_rounded_rect"
                android:drawableStart="@drawable/ic_envelope"
                android:drawableTint="@color/color_white"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email_address"
                android:imeOptions="actionSend"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:textAllCaps="true"
                android:textColor="@color/border_color"
                android:textColorHint="@color/border_color"
                android:textSize="@dimen/_12sdp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardBackgroundColor="@color/color_light_red"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingStart="@dimen/_60sdp"
                    android:paddingEnd="@dimen/_60sdp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_18sdp" />


        </LinearLayout>

    </RelativeLayout>
</layout>